<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:minWidth="@dimen/dialog_nickname_minwidth"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/me_dialg_nickname" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="2dp"
        android:background="@drawable/me_nick_set_bg"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etNickName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/me_nickname_hint" />

        <TextView
            android:id="@+id/tvNickCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/20" />
    </LinearLayout>


    <include layout="@layout/divider_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvCancel"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/cancel" />

        <include layout="@layout/divider_vertical_gray" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvComplete"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/complete" />
    </LinearLayout>

</LinearLayout>