<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/self" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="60dp"
            android:text="@string/login_login" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/selector_login_edit"
            android:ellipsize="end"
            android:singleLine="true"
            android:hint="@string/login_input_account"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="@dimen/font_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_login_edit"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/etPwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_login_pwd"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:hint="@string/login_input_pwd"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/font_login" />

            <ImageView
                android:id="@+id/ivSeePwd"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/login_eye" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_btn"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login_login" />

        <TextView
            android:id="@+id/tvToRegist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_regist" />
    </LinearLayout>

</FrameLayout>