<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/swipeRefreshLayout"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/title_margin_top"
            android:background="@color/white"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/me_icon" />

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="right"
                android:layout_marginRight="15dp" />

            <ImageView
                android:layout_width="@dimen/arrow_size"
                android:layout_height="@dimen/arrow_size"
                android:layout_gravity="right"
                android:visibility="gone"
                android:src="@drawable/arrow_right" />
        </FrameLayout>

        <include layout="@layout/divider_gray" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/me_account" />

            <TextView
                android:id="@+id/tvAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_gravity="right|center_vertical"
                android:text="@string/me_account" />

        </FrameLayout>

        <include layout="@layout/divider_gray" />

        <FrameLayout
            android:id="@+id/flNickName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/me_nickname" />

            <TextView
                android:id="@+id/tvNickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/arrow_size" />

            <ImageView
                android:layout_width="@dimen/arrow_size"
                android:layout_height="@dimen/arrow_size"
                android:layout_gravity="right"
                android:src="@drawable/arrow_right" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/flRoam"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="漫游消息" />

            <ImageView
                android:layout_width="@dimen/arrow_size"
                android:layout_height="@dimen/arrow_size"
                android:layout_gravity="right"
                android:src="@drawable/arrow_right" />
        </FrameLayout>

        <TextView
            android:id="@+id/tvSwitchAccout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/me_switchaccout"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/me_logout" />
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>